Fixed bug when viewed on mobile

--- a/src/Responsive.css
+++ b/src/Responsive.css
@@ -18,7 +18,8 @@
 
   .sections,
   .menus,
-  .about-layer {
+  .about-layer,
+  .main-section {
     display: none;
   }
 }
